--- a/cloudbuild/embed.yaml
+++ b/cloudbuild/embed.yaml
@@ -11,7 +11,7 @@ steps:
       - 'run'
       - 'jobs'
       - 'deploy'
-      - 'embed-top'
+      - 'embed'
       - '--image'
       - 'gcr.io/$PROJECT_ID/embed:latest'
       - '--region'
@@ -26,7 +26,6 @@ steps:
       - 'SECRETS_JSON=embed-secrets:latest'
       - '--max-retries'
       - '1'
-      - '--args=--category_type=top'
 
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
@@ -35,11 +34,11 @@ steps:
       - 'jobs'
       - 'create'
       - 'http'
-      - 'embed-top-scheduler'
+      - 'embed-scheduler'
       - '--schedule'
       - '30 */6 * * *'
       - '--uri'
-      - 'https://europe-west9-run.googleapis.com/apis/run.googleapis.com/v1/namespaces/$PROJECT_ID/jobs/embed-top:run'
+      - 'https://europe-west9-run.googleapis.com/apis/run.googleapis.com/v1/namespaces/$PROJECT_ID/jobs/embed:run'
       - '--http-method'
       - 'POST'
       - '--oauth-service-account-email'
