Update requirements.txt to use newer versions of torchvision and torch

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 google-cloud-bigquery>=3.27.0
 google-auth>=2.37.0
 tqdm>=4.67.1
-torchvision==0.17.2
-torch==2.2.2
+torchvision>=0.22.1
+torch>=2.7.1
 transformers==4.42.3
 datasets==2.20.0
 open-clip-torch>=2.29.0
